fixed positioning bug that broke website on mobile devices

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,7 +9,7 @@ h1 {
 }
 
 body{
-	height: 100%;
+	/*height: 100%;*/
 }
 
 #topbar{
